# estia

./: .wakatime-project  README.md  attribution.txt  db.py  estai.tcss  estia.db  estia.py  main.py  player.py  pyproject.toml  requirements.txt  stages.py  test.py  tui.py
.github/: build.yaml
.github/workflows/: main.yaml
src/: .gitignore  estai.tcss  estia.db  estia.py  player.py  requirements.txt  sounds.py
src/Widgets/: MusicSearch.py  Playlist.py  Pomodoro.py
